# Config-Task-2

./: README.md  grapg.mmd  graph.mmd  main.py  pyproject.toml  testsing.py
data/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
data/logs/refs/heads/: master
data/logs/refs/remotes/origin/: master
data/refs/heads/: master
data/refs/remotes/origin/: master
