[tool.poetry]
name = "config-task-2"
version = "0.1.0"
description = ""
authors = ["Maxim Plotnikov <develop.kisa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mermaid-py = "^0.7.0"
ipython = "^8.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
